# JSave

./: .gitignore  LICENSE  README.md  pyproject.toml  test.sh
.github/workflows/: pack.yml  package.yml  publish.yml
jsave/: __init__.py  __main__.py  error.py  jsave.py  pickle.py  types.py
jsave/cmd/: read.py  save.py  update.py
jsave/cmd/json/: read.py  save.py  update.py
jsave/cmd/pickle/: read.py  save.py
tests/: test_jsave.py  test_pickle.py
