[tool.poetry]
name = "jsave"
version = "1.4.2"
description = "A simple python module for saving data to JSON files"
authors = ["Ethan Illingsworth"]
readme = "README.md"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
tsafe = "1.3.1"
colorxs = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
