[tool.poetry]
name = "jsave"
version = "1.4.4"
description = "A simple python module for saving data to JSON files"
authors = ["Ethan Illingsworth"]
readme = "README.md"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
colorxs = "1.0.1"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
