[tool.poetry]
name = "jsave"
version = "1.6.4"
description = "A simple python module for operating on mainly JSON files. While supporting other formats such as python pickling."
authors = ["Ethan Illingsworth"]
readme = "README.md"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
colorxs = "1.0.1"
cryptography = "^43.0.3"
listtypes = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
